--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "task-liberator",
+  "name": "mapproxy-initializer",
   "version": "1.0.0",
-  "description": "This is map colonies job management system failed clients task releaser",
+  "description": "This is a pre running service for mapproxy that provides yaml configuration file",
   "main": "./src/index.ts",
   "scripts": {
     "test:unit": "jest --config=./tests/configurations/unit/jest.config.js",
@@ -41,10 +41,7 @@
     "@opentelemetry/api": "1.0.0-rc.0",
     "@opentelemetry/api-metrics": "0.19.0",
     "@opentelemetry/instrumentation-http": "0.19.0",
-    "axios": "^0.21.1",
-    "axios-retry": "^3.1.9",
     "config": "^3.3.6",
-    "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.5.0"
@@ -66,7 +63,6 @@
     "jest": "^26.6.3",
     "jest-create-mock-instance": "^1.1.0",
     "jest-html-reporters": "^2.0.3",
-    "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "rimraf": "^3.0.2",
