--- a/package.json
+++ b/package.json
@@ -37,37 +37,42 @@
   },
   "dependencies": {
     "@map-colonies/js-logger": "^0.0.3",
-    "@map-colonies/telemetry": "^1.1.0-7",
+    "@map-colonies/telemetry": "^1.1.1",
     "@opentelemetry/api": "1.0.0-rc.0",
     "@opentelemetry/api-metrics": "0.19.0",
     "@opentelemetry/instrumentation-http": "0.19.0",
+    "aws-sdk": "^2.931.0",
     "config": "^3.3.6",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^10.0.0",
-    "@map-colonies/eslint-config": "^2.1.0",
+    "@map-colonies/eslint-config": "^2.2.1",
     "@map-colonies/prettier-config": "0.0.1",
     "@types/config": "0.0.36",
-    "@types/jest": "^26.0.19",
-    "@types/lodash": "^4.14.168",
+    "@types/jest": "^26.0.23",
+    "@types/js-yaml": "^4.0.1",
+    "@types/lodash": "^4.14.170",
+    "@types/pg": "^8.6.0",
     "commitizen": "^4.2.4",
     "commitlint": "^9.1.2",
-    "copyfiles": "^2.3.0",
+    "copyfiles": "^2.4.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.8.1",
-    "husky": "^4.2.5",
+    "eslint": "^7.29.0",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
     "jest-create-mock-instance": "^1.1.0",
-    "jest-html-reporters": "^2.0.3",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
+    "jest-html-reporters": "^2.1.6",
+    "prettier": "^2.3.1",
+    "pretty-quick": "^3.1.1",
     "rimraf": "^3.0.2",
-    "standard-version": "^9.0.0",
-    "ts-jest": "^26.3.0",
-    "typescript": "^4.2.4"
+    "standard-version": "^9.3.0",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.3.4"
   }
 }
